# charm-market-intelligence-engine

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: .env.example  insight_prompt.md  job_patterns.json
dashboard/: app.py
docs/: data_contract.md  sql_examples.sql
n8n/: charm_workflow.json  charm_workflow_mattermost.json
scripts/: analyze.py  data_cleaning.py  db.py  geocode.py  gsheets_sync.py  gsheets_test.py  insights.py  nlp_entities.py  pandas_examples.py  parse_reports.py  pipeline.py  preview_prompt.py  scrape_jobs.py  sentiment_salience.py  validate_patterns.py
skills/: skills_taxonomy.csv
tests/: conftest.py  test_analyze.py  test_data_cleaning.py
tests/fixtures/: .gitkeep
