[project]
name = "charm-market-intelligence-engine"
version = "1.0.0"
description = "Market intelligence pipeline for Cultural Heritage & Archaeological Resource Management"
requires-python = ">=3.10"

[tool.ruff]
# Target Python 3.10+ syntax
target-version = "py310"
line-length = 100

# Lint all Python files
include = ["scripts/**/*.py", "dashboard/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
# Sensible defaults without being pedantic
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings  
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (let formatter handle)
    "B008",   # function call in default argument (common pattern)
    "B905",   # zip strict (Python 3.10+ only)
]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "dashboard"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

# Start selective: only check core modules
files = ["scripts/data_cleaning.py", "scripts/analyze.py", "scripts/db.py"]

# Don't require full typing coverage initially
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
